# GenAI-WordCup-042024

./: README.md  example_questions.txt  graph.py  pyproject.toml
notebooks/: failure_prediction_xgboost.ipynb
src/: config.py  constants.py  models.py
src/data/database/: connectors.py  handler.py
src/data/machines/: connector.py
src/data/sensors/: connector.py
src/data/user_input/: handler.py
src/tools/database/: base.py  connectors.py  retriever.py
src/tools/predictive_models/: base.py  error_type_prediction.py  fault_prediction.py  feature_extraction.py  feature_importance.py  pipeline.py
store/models/: xgboost.json  xgboost_binary.json  xgboost_multiclass.json
