[tool.poetry]
name = "GenAI-WordCup-042024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.0.37"
langchain = "^0.1.16"
environ-config = "^23.2.0"
langchain-openai = "^0.1.3"
jupyter = "^1.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
imbalanced-learn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
